--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,10 +20,21 @@ jobs:
         run: |
           sudo apt update && sudo apt install python3-pip -y
           pip3 install eclipse-zenoh==0.11.0 pycdr2 --break-system-packages
+
+      - uses: ros-tooling/setup-ros@v0.7
+        with:
+          required-ros-distributions: ${{ matrix.ros_distribution }}
+
       - name: build and test
         uses: ros-tooling/action-ros-ci@v0.3
-        env:
-          INTEGRATION_TESTING: false
         with:
           package-name: free_fleet free_fleet_adapter free_fleet_examples
           target-ros2-distro: ${{ matrix.ros_distribution }}
+          colcon-defaults: |
+            {
+              "build": {
+                "cmake-args": [
+                    "-DINTEGRATION_TESTING=OFF"
+                ]
+              }
+            }
