--- a/.github/integration-tests/docker-compose.yaml
+++ b/.github/integration-tests/docker-compose.yaml
@@ -33,8 +33,8 @@ services:
     image: zenoh
     build:
       context: ../../
-      dockerfile: ./github/minimal-zenoh/Dockerfile
+      dockerfile: .github/minimal-zenoh/Dockerfile
     network_mode: host
     stdin_open: true
     tty: true
-    command: zenohd
+    # command: zenohd
