--- a/.github/minimal-nav2/Dockerfile
+++ b/.github/minimal-nav2/Dockerfile
@@ -17,6 +17,6 @@ RUN rm -rf \
 # Modify existing params file to add initial pose
 RUN mkdir -p /params && cd /params \
   && cp /opt/ros/$ROS_DISTRO/share/nav2_bringup/params/nav2_params.yaml . \
-  && sed -z 's|amcl:\n  ros__parameters:\n|amcl:\n  ros__parameters:\n    set_initial_pose: true\n    initial_pose:{x: -2.0, y: -0.5, z: 0.0, yaw: 0.0}\n|' nav2_params.yaml > nav2_params_edited.yaml
+  && sed -z 's|amcl:\n  ros__parameters:\n|amcl:\n  ros__parameters:\n    set_initial_pose: true\n    initial_pose: {x: -2.0, y: -0.5, z: 0.0, yaw: 0.0}\n|' nav2_params.yaml > nav2_params_edited.yaml
 
-ENTRYPOINT ["bash", "-c", ". /opt/ros/$ROS_DISTRO/setup.bash && ros2 launch nav2_bringup tb3_simulation_launch.py params_file:=/params/nav2_params_edited.yaml"]
+ENTRYPOINT ["bash", "-c", ". /opt/ros/$ROS_DISTRO/setup.bash && ros2 launch nav2_bringup tb3_simulation_launch.py params_file:=/params/nav2_params_edited.yaml use_rviz:=False"]
