--- a/free_fleet_examples/zenoh_configs/turtlebot3_1_zenoh_config.json5
+++ b/free_fleet_examples/zenoh_configs/turtlebot3_1_zenoh_config.json5
@@ -150,7 +150,7 @@
   ////
   //// mode: The bridge's mode (router, peer or client)
   ////
-  mode: "client",
+  // mode: "router",
 
   ////
   //// Which endpoints to connect to. E.g. tcp/localhost:7447.
