--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -3,6 +3,49 @@ name: Nightly
 on: push
 
 jobs:
+  # build-minimal-docker-images:
+  #   name: Push minimal-rmf Docker image to GitHub Packages
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       ros_distribution: [jazzy]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #     - name: Login to docker
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Build and push minimal-nav2-bringup
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #         tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-nav2-bringup
+  #     - name: Build and push minimal-zenoh-bridge
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #           ZENOH_VERSION=1.0.1
+  #           FREE_FLEET_BRANCH=efc/integration-testing
+  #         tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-nav2-bringup
+  #     - name: Build and push minimal-zenoh-router
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: true
+  #         build-args: |
+  #           ROS_DISTRO=${{ matrix.ros_distribution }}
+  #         tags: ghcr.io/${{ github.repository }}/minimal-nav2-bringup:${{ matrix.ros_distribution }}-latest
+  #         context: .github/docker/minimal-nav2-bringup
+
   integration-tests:
     timeout-minutes: 10
     runs-on: ubuntu-latest
@@ -23,7 +66,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Start test fixture containers
-        run: docker-compose -f ".github/integration-tests/docker-compose.yaml" up -d --build
+        run: docker-compose -f ".github/docker/integration-tests/docker-compose.yaml" up -d --build
 
       - uses: ros-tooling/setup-ros@v0.7
         with:
@@ -45,4 +88,4 @@ jobs:
 
       - name: Stop test fixture containers
         if: always()
-        run: docker-compose -f ".github/integration-tests/docker-compose.yaml"  down
+        run: docker-compose -f ".github/docker/integration-tests/docker-compose.yaml"  down
