Use official zenoh docker image and compose example, rename client zenoh config, update README, test build docker images
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/docker/integration-tests/docker-compose.yaml
+++ b/.github/docker/integration-tests/docker-compose.yaml
@@ -26,10 +26,10 @@ services:
       - ROS_DOMAIN_ID=42
 
   minimal-zenoh-router:
-    image: minimal-zenoh-router
-    build:
-      context: ../../../
-      dockerfile: .github/docker/minimal-zenoh-router/Dockerfile
+    image: eclipse/zenoh
+    restart: unless-stopped
     network_mode: host
     stdin_open: true
     tty: true
+    environment:
+      - RUST_LOG=debug
