--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,7 +6,7 @@ name: tests
 on: push
 
 jobs:
-  build_and_test:
+  tests:
     runs-on: ubuntu-latest
     container:
       image: osrf/ros:${{ matrix.ros_distribution }}-desktop-noble
