--- a/.github/actions/build-and-test/action.yaml
+++ b/.github/actions/build-and-test/action.yaml
@@ -13,11 +13,13 @@ inputs:
     default: "OFF"
 
 runs:
+  using: composite
   steps:
     - name: install dependencies
       run: |
         sudo apt update && sudo apt install python3-pip -y
         pip3 install eclipse-zenoh==${{ inputs.zenoh-version }} pycdr2 --break-system-packages
+      shell: bash
 
     - uses: ros-tooling/setup-ros@v0.7
       with:
