Set nightly schedule, fix steps in unit-tests
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,6 +1,9 @@
-name: Nightly
+name: nightly
 
-on: push
+on:
+  schedule:
+    # 2am SGT
+    - cron: '0 18 * * *'
 
 jobs:
   build-minimal-docker-images:
