Remove minimal zenoh router dockerfile, add checkout to unit-tests
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -13,6 +13,9 @@ jobs:
           - jazzy
           - rolling
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
       - name: build-and-test
         uses: ./.github/actions/build-and-test
         with:
