--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -47,9 +47,9 @@ foreach(path ${traffic_editor_paths})
 endforeach()
 
 install(PROGRAMS
-  ${PROJECT_NAME}/tests/test_cancel_all_goals.py
-  ${PROJECT_NAME}/tests/test_navigate_to_pose.py
-  ${PROJECT_NAME}/tests/test_tf.py
+  ${PROJECT_NAME}/cancel_all_goals.py
+  ${PROJECT_NAME}/get_tf.py
+  ${PROJECT_NAME}/send_navigate_to_pose.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
