--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -34,3 +34,19 @@ jobs:
       - name: Stop test fixture containers
         if: always()
         run: docker-compose -f ".github/docker/integration-tests/docker-compose.yaml" down
+
+      - name: Upload failed test results
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: test-results
+          path: ros_ws/build/*/test_results/*/*.catch2.xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ros_ws/coveragepy/.coverage
+          flags: tests
+          fail_ci_if_error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
