Fix launch files
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_adapter/CMakeLists.txt
+++ b/free_fleet_adapter/CMakeLists.txt
@@ -6,6 +6,13 @@ find_package(ament_cmake REQUIRED)
 
 ament_python_install_package(${PROJECT_NAME})
 
+install(PROGRAMS
+  ${PROJECT_NAME}/fleet_adapter.py
+  ${PROJECT_NAME}/robot_adapter.py
+  ${PROJECT_NAME}/nav2_robot_adapter.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 install(DIRECTORY
   launch/
   DESTINATION share/${PROJECT_NAME}
