Efc/integration testing (#157)
* Adding dockerfiles for building tests

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Initial docker compose nightly workflow

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Using new docker compose command

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Fix zenoh bridge image branch

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Use curl for repo tar

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Use docker compose command for down too

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Setup integration testing with flag, test with workflow

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Install docker-compose in ros container

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Ommit setup-ros step and fix linting

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Revert setup ros step, use cmake -args

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Use 1.0.1 API

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Using client and router method

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Remove command in docker compose

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Working locally, commented out zenohd

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Spinning up minimal-zenoh too

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Moving docker files, trying with client mode

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Use official zenoh docker image and compose example, rename client zenoh config, update README, test build docker images

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Re-usable workflow actions, split integration testing

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Missing docker-compose installation

Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

* Fix broken action, rename test job

Signed-off-b

--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -47,9 +47,9 @@ foreach(path ${traffic_editor_paths})
 endforeach()
 
 install(PROGRAMS
-  ${PROJECT_NAME}/tests/test_cancel_all_goals.py
-  ${PROJECT_NAME}/tests/test_navigate_to_pose.py
-  ${PROJECT_NAME}/tests/test_tf.py
+  ${PROJECT_NAME}/nav2_cancel_all_goals.py
+  ${PROJECT_NAME}/nav2_get_tf.py
+  ${PROJECT_NAME}/nav2_send_navigate_to_pose.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
