--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,4 +1,8 @@
 fixes:
   - "ros_ws/src/*/free_fleet/free_fleet/::"
   - "ros_ws/src/*/free_fleet/free_fleet_adapter/::"
-  - "ros_ws/src/*/free_fleet/free_fleet_examples/::"
+
+ignore:
+  - "**/tests/*"
+  - "**/tests/**/*"
+  - "ros_ws/src/*/free_fleet/free_fleet_adapter/free_fleet_adapter/fleet_adapter.py"
