--- a/codecov.yaml
+++ b/codecov.yaml
@@ -11,6 +11,6 @@ fixes:
   - "ros_ws/src/*/free_fleet/free_fleet/::"
   - "ros_ws/src/*/free_fleet/free_fleet_adapter/::"
 ignore:
-  - "**/tests"
+  - "free_fleet_examples"
+  - "**/test_*.py"
   - "**/setup.py"
-  - "ros_ws/src/*/free_fleet/free_fleet_exmaples"
