Basic testing on docker image for tf works
Signed-off-by: Aaron Chong <aaronchong@google.com>

--- a/.github/docker/integration-tests/docker-compose-nav2.yaml
+++ b/.github/docker/integration-tests/docker-compose-nav2.yaml
@@ -11,8 +11,8 @@ services:
     environment:
       - ROS_DOMAIN_ID=42
 
-  minimal-zenoh-bridge:
-    image: ghcr.io/open-rmf/free_fleet/minimal-zenoh-bridge:jazzy-latest
+  minimal-zenoh-bridge-ros2dds:
+    image: ghcr.io/open-rmf/free_fleet/minimal-zenoh-bridge-ros2dds:jazzy-latest
     network_mode: host
     stdin_open: true
     tty: true
