--- a/.github/docker/minimal-zenoh-bridge-ros1/Dockerfile
+++ b/.github/docker/minimal-zenoh-bridge-ros1/Dockerfile
@@ -13,7 +13,7 @@ RUN mkdir -p /zenoh-bridge && cd /zenoh-bridge \
 RUN cd /zenoh-bridge \
   && wget -O turtlebot3_1_client_zenoh_config.json5 https://raw.githubusercontent.com/open-rmf/free_fleet/refs/heads/$FREE_FLEET_BRANCH/free_fleet_examples/config/zenoh/turtlebot3_1_client_zenoh_config.json5
 
-ENV RMW_IMPLEMENTATION rmw_cyclonedds_cpp
+ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 
 RUN rm -rf \
   /var/lib/apt/lists \
