--- a/.github/docker/minimal-nav2-bringup/Dockerfile
+++ b/.github/docker/minimal-nav2-bringup/Dockerfile
@@ -7,8 +7,8 @@ RUN mkdir -p /tb3 && cd /tb3 \
   && curl -sL https://github.com/ROBOTIS-GIT/turtlebot3_simulations/archive/refs/heads/master.tar.gz -o turtlebot3_simulations.tar.gz \
   && mkdir -p /tb3/turtlebot3_simulations && tar zxf turtlebot3_simulations.tar.gz -C /tb3/turtlebot3_simulations --strip-components=1 && rm turtlebot3_simulations.tar.gz
 
-ENV RMW_IMPLEMENTATION rmw_cyclonedds_cpp
-ENV GAZEBO_MODEL_PATH "$GAZEBO_MODEL_PATH:/tb3/turtlebot3_simulations/turtlebot3_gazebo/models"
+ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+ENV GAZEBO_MODEL_PATH="$GAZEBO_MODEL_PATH:/tb3/turtlebot3_simulations/turtlebot3_gazebo/models"
 
 RUN rm -rf \
   /var/lib/apt/lists \
