--- a/.github/docker/minimal-zenoh-bridge-ros1/Dockerfile
+++ b/.github/docker/minimal-zenoh-bridge-ros1/Dockerfile
@@ -1,22 +1,30 @@
 ARG ROS_DISTRO=noetic
 FROM docker.io/ros:$ROS_DISTRO-ros-base
-ARG ZENOH_VERSION=1.0.0-beta.2
+ARG ZENOH_BRIDGE_REPO=eclipse-zenoh/zenoh-plugin-ros1
+ARG ZENOH_BRIDGE_TAG=main
 ARG FREE_FLEET_BRANCH=main
 
-RUN apt update && apt install -y wget unzip ros-jazzy-rmw-cyclonedds-cpp
+RUN apt update && apt install -y wget unzip build-essential curl
+
+# Get Rust
+RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
+
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 RUN mkdir -p /zenoh-bridge && cd /zenoh-bridge \
-  && wget -O zenoh-plugin-ros1.zip https://github.com/eclipse-zenoh/zenoh-plugin-ros1/releases/download/$ZENOH_VERSION/zenoh-plugin-ros1-$ZENOH_VERSION-x86_64-unknown-linux-gnu-standalone.zip \
-  && unzip zenoh-plugin-ros1.zip \
-  && rm zenoh-plugin-ros1.zip
+  && curl -sL https://github.com/$ZENOH_BRIDGE_REPO/archive/refs/heads/$ZENOH_BRIDGE_TAG.zip -o zenoh-plugin-ros1.tar.gz \
+  && mkdir -p /zenoh-bridge/zenoh-plugin-ros1 \
+  && tar zxf zenoh-plugin-ros1.tar.gz -C /zenoh-bridge/zenoh-plugin-ros1 --strip-components=1 \
+  && rm zenoh-plugin-ros1.tar.gz
+
+RUN cd /zenoh-bridge/zenoh-plugin-ros1 \
+  && cargo build --package zenoh-bridge-ros1 --bin zenoh-bridge-ros1 --release
 
 RUN cd /zenoh-bridge \
-  && wget -O turtlebot3_1_client_zenoh_config.json5 https://raw.githubusercontent.com/open-rmf/free_fleet/refs/heads/$FREE_FLEET_BRANCH/free_fleet_examples/config/zenoh/turtlebot3_1_client_zenoh_config.json5
-
-ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+  && wget -O turtlebot3_zenoh_bridge_ros1_client_config.json5 https://raw.githubusercontent.com/open-rmf/free_fleet/refs/heads/$FREE_FLEET_BRANCH/free_fleet_examples/config/zenoh/turtlebot3_zenoh_bridge_ros1_client_config.json5
 
 RUN rm -rf \
   /var/lib/apt/lists \
   /dist
 
-ENTRYPOINT ["bash", "-c", ". /opt/ros/$ROS_DISTRO/setup.bash && /zenoh-bridge/zenoh-bridge-ros2dds -c /zenoh-bridge/turtlebot3_1_client_zenoh_config.json5"]
+ENTRYPOINT ["bash", "-c", ". /opt/ros/$ROS_DISTRO/setup.bash && /zenoh-bridge/zenoh-bridge-ros1/target/release/zenoh-bridge-ros1 -c /zenoh-bridge/turtlebot3_zenoh_bridge_ros1_client_config.json5"]
