--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -9,7 +9,7 @@ on: [push]
 
 jobs:
   build-minimal-nav2-docker-images:
-    name: Push minimal docker images to GitHub Packages
+    name: Push minimal nav2 docker images to GitHub Packages
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -42,13 +42,13 @@ jobs:
           push: true
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.0.1
+            ZENOH_VERSION=1.1.0
             FREE_FLEET_BRANCH=efc/ros1
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros2dds:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros2dds
 
   build-minimal-nav1-docker-images:
-    name: Push minimal docker images to GitHub Packages
+    name: Push minimal nav1 docker images to GitHub Packages
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -90,7 +90,8 @@ jobs:
           push: true
           build-args: |
             ROS_DISTRO=${{ matrix.ros_distribution }}
-            ZENOH_VERSION=1.0.0-beta.2
+            ZENOH_BRIDGE_REPO=aaronchongth/zenoh-plugin-ros1
+            ZENOH_BRIDGE_TAG=namespace
             FREE_FLEET_BRANCH=efc/ros1
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros1:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros1
