--- a/.github/docker/minimal-zenoh-bridge-ros2dds/Dockerfile
+++ b/.github/docker/minimal-zenoh-bridge-ros2dds/Dockerfile
@@ -3,7 +3,7 @@ FROM docker.io/ros:$ROS_DISTRO-ros-base
 ARG ZENOH_VERSION=1.1.0
 ARG FREE_FLEET_BRANCH=main
 
-RUN apt update && apt install -y wget unzip ros-jazzy-rmw-cyclonedds-cpp
+RUN apt update && apt install -y wget unzip ros-$ROS_DISTRO-rmw-cyclonedds-cpp
 
 RUN mkdir -p /zenoh-bridge && cd /zenoh-bridge \
   && wget -O zenoh-plugin-ros2dds.zip https://github.com/eclipse-zenoh/zenoh-plugin-ros2dds/releases/download/$ZENOH_VERSION/zenoh-plugin-ros2dds-$ZENOH_VERSION-x86_64-unknown-linux-gnu-standalone.zip \
