Fix imports, lint, new cmake and action argument to split nav1 or nav2 integration tests
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nav2-integration-tests.yaml
+++ b/.github/workflows/nav2-integration-tests.yaml
@@ -29,7 +29,7 @@ jobs:
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
           zenoh-version: 1.1.0
-          integration-testing: ON
+          nav2-integration-testing: ON
 
       - name: Stop test fixture containers
         if: always()
