--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -96,6 +96,39 @@ jobs:
           tags: ghcr.io/${{ github.repository }}/minimal-zenoh-bridge-ros1:${{ matrix.ros_distribution }}-latest
           context: .github/docker/minimal-zenoh-bridge-ros1
 
+  nav1-integration-tests:
+    needs: build-minimal-nav1-docker-images
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    container:
+      image: osrf/ros:${{ matrix.ros_distribution }}-desktop-noble
+    strategy:
+      matrix:
+        ros_distribution:
+          - jazzy
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install docker-compose
+        run: |
+          sudo apt update && sudo apt install docker-compose -y
+
+      - name: Start test fixture containers
+        run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" up -d --build
+
+      - name: build-and-test
+        uses: ./.github/actions/build-and-test
+        with:
+          ros-distribution: ${{ matrix.ros_distribution }}
+          zenoh-version: 1.1.0
+          nav1-integration-testing: ON
+
+      - name: Stop test fixture containers
+        if: always()
+        run: docker-compose -f ".github/docker/integration-tests/nav1-docker-compose.yaml" down
+
   nav2-integration-tests:
     needs: build-minimal-nav2-docker-images
     timeout-minutes: 10
@@ -122,8 +155,8 @@ jobs:
         uses: ./.github/actions/build-and-test
         with:
           ros-distribution: ${{ matrix.ros_distribution }}
-          zenoh-version: 1.0.1
-          integration-testing: ON
+          zenoh-version: 1.1.0
+          nav2-integration-testing: ON
 
       - name: Stop test fixture containers
         if: always()
