Turn off nightly on-push build
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -1,11 +1,9 @@
 name: nightly
 
-# on:
-#   schedule:
-#     # 2am SGT
-#     - cron: '0 18 * * *'
-
-on: [push]
+on:
+  schedule:
+    # 2am SGT
+    - cron: '0 18 * * *'
 
 jobs:
   build-minimal-nav2-docker-images:
